--- a/action.yml
+++ b/action.yml
@@ -7,8 +7,8 @@ inputs:
     required: true
   port:
     description: 'Dependency-Track port'
-    required: false
-    default: 8081
+    required: true
+    default: 8080
   apikey:
     description: 'Dependency-Track API key'
     required: true
@@ -29,9 +29,4 @@ inputs:
 runs:
   using: 'node12'
   main: 'index.js'
-  uses: DependencyTrack/gh-upload-sbom@v1.0.0
-with:
-  serverhostname: 'http://localhost:8081'
-  apikey: ${{ secrets.wh2ETYrJv0xmwP6R9MzhxIZqtgvTTlIp }}
-  projectname: 'ssabomupload'
-  projectversion: '1.0'
+ 
