--- a/action.yml
+++ b/action.yml
@@ -7,8 +7,8 @@ inputs:
     required: true
   port:
     description: 'Dependency-Track port'
-    required: false
-    default: 443
+    required: true
+    default: 8080
   apikey:
     description: 'Dependency-Track API key'
     required: true
